--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "discord.js": "^14.14.0",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "sentiment": "^5.0.2"
   },
   "engines": {
     "node": ">=16.9.0"
